[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://src/core/entities/weapon.gd" id="1_dogkf"]
[ext_resource type="Script" path="res://src/core/resources/weapon_data.gd" id="2_uqodn"]
[ext_resource type="Texture2D" path="res://_developer/pascal/assets/SPR_Revolver.png" id="3_24mfc"]
[ext_resource type="Script" path="res://src/core/components/projectile_emitter.gd" id="4_wk7lm"]

[sub_resource type="Resource" id="Resource_nd85d"]
script = ExtResource("2_uqodn")
id = 0
name = ""
full_name = ""
description = ""
damage = 10
attack_speed = 1.0
cooldown = 0.0
attack_range = 300.0
targets = 0
count = 0
is_fixed = false
pattern = 0
deviation = 0
projectile_speed = 1000
size_multiplier = 1.0
bounces = 1
pierce = 0
return_to_player = false

[sub_resource type="CircleShape2D" id="CircleShape2D_y1gmp"]
radius = 843.534

[node name="WeaponBase" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_dogkf")
data = SubResource("Resource_nd85d")

[node name="Range" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y1gmp")

[node name="RotationPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Weapon" type="Sprite2D" parent="RotationPoint"]
position = Vector2(19, -9)
scale = Vector2(0.152114, 0.152114)
texture = ExtResource("3_24mfc")
flip_h = true

[node name="ProjectileEmitter" type="Marker2D" parent="RotationPoint/Weapon"]
position = Vector2(193, 1)
script = ExtResource("4_wk7lm")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[connection signal="shot" from="." to="RotationPoint/Weapon/ProjectileEmitter" method="_on_weapon_base_shot"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
