[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://src/core/entities/weapon.gd" id="1_w4sh6"]
[ext_resource type="Resource" path="res://_developer/pascal/WeaponData3.tres" id="2_6hfp6"]
[ext_resource type="Texture2D" path="res://_developer/pascal/assets/png-transparent-shield-round-wooden-shield-free-to-pull-the-material-angle-free-logo-design-template-photography-thumbnail-removebg-preview.png" id="2_84odn"]
[ext_resource type="Script" path="res://src/core/components/projectile_emitter.gd" id="4_geuvn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yuyap"]
radius = 591.291

[node name="WeaponBase" type="Area2D" node_paths=PackedStringArray("aim_range")]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_w4sh6")
data = ExtResource("2_6hfp6")
aim_range = NodePath("ThrowRange")

[node name="ThrowRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yuyap")

[node name="RotationPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Weapon" type="Sprite2D" parent="RotationPoint"]
scale = Vector2(0.194444, 0.194444)
texture = ExtResource("2_84odn")

[node name="ProjectileEmitter2" type="Marker2D" parent="RotationPoint/Weapon"]
script = ExtResource("4_geuvn")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="shot" from="." to="RotationPoint/Weapon/ProjectileEmitter2" method="_on_weapon_base_shot"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
